# mnemo

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  install.ps1  install.sh
.claude/: launch.json
.claude-plugin/: marketplace.json  plugin.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  demo-pages.yml  release.yml
bench/: README.md  pyproject.toml
bench/agent_memory_bench/: __init__.py  judge.py  runner.py
bench/agent_memory_bench/agents/: __init__.py  mnemo.py  vanilla.py
bench/agent_memory_bench/tasks/: __init__.py  answer_follow_up.py  prompt_architect.py
bench/fixtures/answer_follow_up/: corpus.jsonl  expected.json  prompts.json
bench/fixtures/prompt_architect/: corpus.jsonl  expected.json  prompts.json
bench/tests/: test_answer_follow_up.py  test_prompt_architect.py  test_prompt_architect_v5_11.py  test_runner_skeleton.py
clients/middleware-py/: README.md  pyproject.toml
clients/middleware-py/mnemo_middleware/: __init__.py  _patcher.py  config.py  errors.py  retrieve.py
clients/middleware-py/mnemo_middleware/_shims/: __init__.py  anthropic.py  google.py  ollama.py  openai.py
clients/middleware-py/tests/: test_patch.py  test_retrieve.py
commands/: mnemo-add.md  mnemo-hooks.md  mnemo-incident.md  mnemo-plan.md  mnemo-prompt.md  mnemo-query.md  mnemo-reindex.md  mnemo-retro.md  mnemo-show.md  mnemo-status.md  mnemo-ui.md
daemon/: README.md  pyproject.toml
daemon/mnemo/: __init__.py  agent_tools.py  analyzer.py  api_schemas.py  apply.py  auto_router.py  chat.py  cli.py  compaction.py  compress.py  config.py  daemon.py  doctor.py  embed.py  eval_retrieval.py  eval_tasks.py  feedback.py  git_log.py  governance.py  graph.py  ingest.py  intent.py  keys.py  mcp_server.py  migrate_identity.py  paths.py  rerank.py  retrieve.py  retune.py  safeguards.py  server.py  statusline.py  store.py  watcher.py  workspaces.py
daemon/mnemo/extractors/: __init__.py  django.py  express.py  fastapi.py  flask.py  react.py
daemon/mnemo/parsers/: __init__.py  code.py  md.py  pdf.py  scope.py  tree_sitter.py  txt.py
daemon/mnemo/providers/: __init__.py  anthropic.py  google.py  ollama.py  openai.py
daemon/mnemo/ui/: __init__.py  _repel.py  chat_surface.py  graph_layout.py  palette.py  routes.py
daemon/mnemo/ui/static/: app.css  app.js  chat.js
daemon/mnemo/ui/templates/: _chat_bookmarks.html  _chat_composer.html  _chat_examples.html  _chat_rail.html  _pagination.html  _search_results.html  _settings_tabs.html  analyze.html  audit.html  base.html  chat.html  chat_settings.html  code_function.html  code_landing.html  code_project.html  code_sitemap.html  dashboard.html  graph.html  index.html  node.html  nodes.html  settings.html  sources.html  workspaces.html
daemon/scripts/: bench.py  smoke_ingest.py
daemon/tests/: conftest.py
daemon/tests/fixtures/: project_keys.json  retrieval_eval.json  tasks_eval.json
daemon/tests/integration/: test_analyze_endpoint.py  test_daemon_lifecycle.py  test_embed_real.py  test_git_log_integration.py  test_mcp_mount_claude_desktop.py  test_mcp_mount_continue.py  test_mcp_mount_cursor.py  test_mcp_mount_gemini_cli.py  test_mcp_mount_openai_agents_sdk.py  test_mcp_mount_windsurf.py  test_mcp_mount_zed.py  test_retrieve_real.py  test_smoke_full.py  test_v1_feedback.py  test_v1_nodes_create.py  test_v1_projects.py  test_v1_redirect.py  test_v1_reindex.py  test_v1_sources.py  test_v1_sources_preview.py  test_watcher.py
daemon/tests/unit/: test_agent_loop.py  test_agent_permissions.py  test_agent_skills.py  test_agent_tools_read.py  test_agent_tools_write.py  test_analyze_detectors.py  test_analyze_node_labels.py  test_analyze_queue_endpoint.py  test_analyze_queue_ui.py  test_analyze_ui_page.py  test_api_key_schema.py  test_api_providers.py  test_api_schemas.py  test_apply_orphan_fix.py  test_apply_queue_endpoint.py  test_apply_ui.py  test_architect_copy_buttons.py  test_audit_queue_store.py  test_auto_router.py  test_auto_router_propose.py  test_auto_scope.py  test_base_isolation.py  test_billing_report.py  test_body_streaming.py  test_chat_endpoints.py  test_chat_examples_ux.py  test_chat_page.py  test_chat_rename.py  test_chat_shared.py  test_chat_store.py  test_chat_surface_contract.py  test_chat_tokens_bookmarks.py  test_chat_v31_bugfixes.py  test_cli.py  test_cli_key_commands.py  test_cli_key_set_quota.py  test_cli_light_import.py  test_code_landing_workspace_scope.py  test_cohesion_judge.py  test_compaction.py  (+145 more)
daemon/tests/unit/_snapshots/: mcp_tool_list.json
demo/: index.html.tmpl
docs/: architecture.md  autostart-linux.md  autostart-macos.md  autostart-windows.md  benchmarks.md  protocol.md  roadmap.md
docs/benchmark/: agent-memory-spec-v0.md
docs/case-studies/: 2026-05-mnemo-self-host.md
docs/examples/: sample-queries.md
docs/hosted/: deploying.md
docs/integrations/: PICKS.md  README.md  claude-desktop.md  continue.md  cursor.md  gemini-cli.md  openai-agents-sdk.md  windsurf.md  wire-schema.md  zed.md
docs/plans/: 2026-05-09-mnemo-design.md  2026-05-10-mnemo-v1.1-design.md  2026-05-10-mnemo-v1.2-design.md  2026-05-11-mnemo-v2.0-design.md  2026-05-13-pr-body-v2.0.0-v2.1.0.md  2026-05-13-pr-body-v2.1.1.md  2026-05-13-pr-body-v2.1.2.md  2026-05-14-mnemo-v2.6-workspaces-design.md  2026-05-14-mnemo-v3-design.md  2026-05-14-pr-body-v2.1.3.md  2026-05-14-ux-progressive-design.md  2026-05-15-mnemo-v3-implementation-plan.md  2026-05-15-mnemo-v3.1-companion-design.md  2026-05-15-nebula-cosmograph-webgl-design.md  2026-05-16-mnemo-v3.2-agentic-companion-design.md  2026-05-16-mnemo-v4-design.md  2026-05-16-mnemo-v4.0-design-system.md  2026-05-16-mnemo-v4.1-provider-registry.md  2026-05-16-mnemo-v4.2-settings.md  2026-05-16-mnemo-v4.3-chat-surface.md  2026-05-17-mnemo-v4.4-nebula-renderer-swap.md  (+28 more)
hooks/: hooks.json  post-tool-use.ps1  post-tool-use.sh  session-start.ps1  session-start.sh  user-prompt-submit.ps1  user-prompt-submit.sh
scripts/: build_demo.py
(+41 files in other folders)
