[project]
name = "agent-memory-bench"
version = "0.1.0"
description = "Reproducible benchmark for typed Graph-RAG agent memory. See docs/benchmark/agent-memory-spec-v0.md in the parent repo for the v0 spec."
license = { text = "MIT" }
authors = [{ name = "mnemo contributors" }]
readme = "README.md"
requires-python = ">=3.11"
# Skeleton phase: no runtime deps. Task 3.3 may add httpx (for the
# mnemo daemon agent baseline) gated behind an optional-extra so the
# core remains dependency-free for external implementers.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.15"]
# mnemo extra pulls the optional client deps for agent_mnemo when it
# lands in Task 3.3.
mnemo = ["httpx>=0.27"]
# llm-judge extra (v5.11.0) pulls Anthropic SDK for the opt-in M4
# rubric judge in ``agent_memory_bench.judge``. Default scoring stays
# keyword-based so the core remains dependency-free for external
# implementers. Enable via:
#   pip install agent-memory-bench[llm-judge]
#   export MNEMO_BENCH_LLM_JUDGE=1
#   export ANTHROPIC_API_KEY=sk-...
llm-judge = ["anthropic>=0.40"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_memory_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4", "UP", "SIM", "PT"]
ignore = ["E501"]
