[project]
name = "mnemo"
version = "0.1.0"
description = "Local-first knowledge memory system for Claude Code"
readme = "../README.md"
license = { text = "MIT" }
authors = [{ name = "mnemo contributors" }]
requires-python = ">=3.11"
dependencies = [
    "python-frontmatter>=1.1",
    "watchfiles>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[project.scripts]
mnemo = "mnemo.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mnemo"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4", "UP", "SIM", "PT"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
