[project]
name = "mnemo"
version = "1.0.2"
description = "Local-first knowledge memory system for Claude Code"
# README lives at repo root, not inside the daemon package; see
# https://github.com/mmct-jsc/mnemo for the full docs.
license = { text = "MIT" }
authors = [{ name = "mnemo contributors" }]
requires-python = ">=3.11"
dependencies = [
    "python-frontmatter>=1.1",
    "watchfiles>=0.21",
    "sqlite-vec>=0.1.6",
    "sentence-transformers>=2.5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "typer>=0.9",
    "pydantic>=2.6",
    "jinja2>=3.1",
]

[tool.hatch.build.targets.wheel.sources]
"mnemo/ui/templates" = "mnemo/ui/templates"
"mnemo/ui/static" = "mnemo/ui/static"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "httpx>=0.27",
]

[project.scripts]
mnemo = "mnemo.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mnemo"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4", "UP", "SIM", "PT"]
# B008: FastAPI uses Depends() in argument defaults by design.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
