[project]
name = "mnemo"
version = "4.3.2"
description = "Local-first knowledge memory system for Claude Code"
# README lives at repo root, not inside the daemon package; see
# https://github.com/mmct-jsc/mnemo for the full docs.
license = { text = "MIT" }
authors = [{ name = "mnemo contributors" }]
requires-python = ">=3.11"
dependencies = [
    "python-frontmatter>=1.1",
    "watchfiles>=1.1.1",
    "sqlite-vec>=0.1.6",
    "sentence-transformers>=5.4.1",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.27",
    "typer>=0.25.1",
    "pydantic>=2.13.4",
    "jinja2>=3.1",
    "pathspec>=0.12",
    "pypdf>=6.11.0",
    # v2.0 phase 3: tree-sitter grammar bundle. The launch core is
    # Python + TypeScript (+ TSX) + JavaScript + Go (Tier 2 targets)
    # plus Markdown + JSON + YAML (config / docs under any code_repo).
    # Tier 1 languages beyond this (Rust, Java, C, C++, Ruby, PHP,
    # C#, Kotlin, Swift, Bash) are listed in LAZY_LANGUAGES inside
    # ``mnemo.parsers.tree_sitter`` -- users install them on demand
    # via ``pip install tree-sitter-<lang>``.
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-json>=0.23",
    "tree-sitter-yaml>=0.7",
    "tree-sitter-markdown>=0.4",
    # v3: agentic chat companion. Anthropic provider (phase 2);
    # openai / google-genai / keyring / mcp land in phases 5-7.
    "anthropic>=0.40",
    "openai>=1.40",
    "google-genai>=0.3",
    "mcp>=1.2",
    "keyring>=25.0",
]

[tool.hatch.build.targets.wheel.sources]
"mnemo/ui/templates" = "mnemo/ui/templates"
"mnemo/ui/static" = "mnemo/ui/static"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
    "httpx>=0.27",
]

[project.scripts]
mnemo = "mnemo.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mnemo"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4", "UP", "SIM", "PT"]
# B008: FastAPI uses Depends() in argument defaults by design.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
